--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,16 @@
         </div>
     </div>
 
+    <!-- Text Printing Section -->
+    <div class="card bg-secondary text-light mb-5 p-4 shadow-lg">
+        <h2 class="mb-4">Send Text to Printer</h2>
+        <div class="mb-3">
+            <label for="textInput" class="form-label">Enter Text:</label>
+            <textarea id="textInput" class="form-control" rows="3" placeholder="Type your text here"></textarea>
+        </div>
+        <button id="printTextButton" class="btn btn-primary">Print Text</button>
+    </div>
+
     <!-- Local Bootstrap JS -->
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     <script src="app.js"></script>
