finishing touches to text to speech functionality :)

--- a/public/index.html
+++ b/public/index.html
@@ -123,15 +123,18 @@
             </div>
             <button id="printImageButton" class="btn btn-primary">Print Image</button>
         </div>
+    </div>
 
-        <!-- Unit License Section (Moved to bottom) -->
-        <div class="card mb-5 p-4">
-            <h2 class="mb-4">Unit Identification</h2>
-            <div class="text-center">
-                <img src="droid_image.png" alt="Unit License" class="img-fluid rounded shadow-lg" style="max-width: 100%; border: 1px solid var(--primary-dim);">
+    <!-- Footer with Unit Identification -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-image">
+                    <img src="droid_image.png" alt="Unit License" class="unit-image">
+                </div>
             </div>
         </div>
-    </div>
+    </footer>
 
     <!-- Local Bootstrap JS -->
     <script src="libs/bootstrap/bootstrap.min.js"></script>
